# onlinePractice/docs/swagger.yaml
@@ -74,6 +74,29 @@ paths:
       summary: 问题列表
       tags:
       - 公共方法
+  /rank-list:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: page, 默认为1
+        in: query
+        name: page
+        type: integer
+      - description: size, 默认为20
+        in: query
+        name: size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":"200","msg":"","data":""}'
+          schema:
+            type: string
+      summary: 用户排行榜
+      tags:
+      - 公共方法
   /register:
     post:
       parameters:
