# onlinePractice/router/app.go
@@ -25,6 +25,8 @@ func Router() *gin.Engine {
 	r.POST("/login", service.Login)
 	r.POST("/send-code", service.SendCode)
 	r.POST("/register", service.Register)
+	// 用户排行榜
+	r.GET("/rank-list", service.GetRankList)
 
 	// 提交记录
 	r.GET("/submit-list", service.GetSubmitList)
